# zero2prod

./: .env  Cargo.toml  Dockerfile  make_docker_image.sh  run_docker.sh
migrations/: 20241031120641_create_subscriptions_table.sql
scripts/: init_db.sh  install_sqlx_cli.sh  migrate_db.sh  sqlx_prepare_offline.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: health_check.rs  mod.rs  subscriptions.rs
tests/: health_check.rs
